--- a/src/container/App.css
+++ b/src/container/App.css
@@ -1,8 +1,9 @@
 #root {
-  max-width: 1000px;
+  max-width: 1100px;
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
+  box-sizing: border-box;
 }
 
 .App {
@@ -14,6 +15,17 @@
   margin-bottom: 40px;
 }
 
-.col  {
+
+.col-1 {
   padding: 20px;
+  border-radius: 24px;
+  width: 320px;
+  background-color: #f6ddbd;
+}
+
+
+.col-2  {
+  padding: 20px;
+  border-radius: 24px;
+  background-color: burlywood;
 }
